# MTspin-mcu-firmware

./: .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  SYSTEMUML.puml  arduino-boards.txt  arduino-cores.txt  arduino-libs.txt  arduino_cores.txt  arduino_libs.txt  uml class diagram - overview.puml  uml-class-diagram-overview.puml  version.txt
.github/workflows/: build-project.yaml  build-test-release.yaml  generate-binaries.yaml  release-binaries.yaml  static-check.yaml
scripts/: build_for_linux.sh  build_for_windows.cmd  setup-build-linux.sh  setup-build-windows.cmd  setup-linux.sh  setup-windows.cmd  setup_for_linux.sh  setup_for_windows.cmd  test.sh
scripts/cmake/: compile-arduino.cmake  compile-for-arduino.cmake  create-version-file.cmake  get-doxygen-awesome-css.cmake  get-gtest.cmake  get-plantuml.cmake  target-doxygen.cmake  target-source-lines-of-code.cmake
src/: TestLib.cpp  TestLib.h  button.cpp  button.h  button_manager.cpp  button_manager.h  configuration.cpp  configuration.h  control_system.cpp  control_system.h  data_types.h  hardware_config.h  momentary_button.cpp  momentary_button.h  pin_debouncer.cpp  src.ino  src_hardware_config.h  stepper_driver.cpp  stepper_driver.h  version.h
tests/: CMakeLists.txt  main.cc
